--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,10 @@
-$primary: #d04f4f;
-$secondary: #3282f7;
-$tertiary: #68d9a4;
+// color
+$primary: #D04F4F;
+$secondary: #3282F7;
+$tertiary: #68D9A4;
+$quaternary: #ED6454;
+$mercury: #E7E7E7;
+$pinkSwan: #C7BEBE;
+
+// size 
+$radius: 0.4em;
