--- a/sass/main.css
+++ b/sass/main.css
@@ -362,6 +362,14 @@ h1 {
   margin: 5px;
 }
 
+.grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+
 .main {
   margin: 0 6vw;
 }
