--- a/sass/main.css
+++ b/sass/main.css
@@ -370,6 +370,68 @@ h1 {
   grid-gap: 30px;
 }
 
+.recipe {
+  border-radius: 0.4em;
+  overflow: hidden;
+}
+
+.recipe__image {
+  background: #C7BEBE;
+  display: block;
+  height: 178px;
+}
+
+.recipe__description {
+  background: #E7E7E7;
+  padding: 20px;
+}
+
+.recipe__description__header {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.recipe__description__header__title {
+  font-size: 18px;
+}
+
+.recipe__description__header__time-icon {
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.recipe__description__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.recipe__description__content__liste {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 10px;
+}
+
+.recipe__description__content__text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-left: 10px;
+}
+
+.recipe__description span {
+  font-weight: 700;
+}
+
 .main {
   margin: 0 6vw;
 }
