affichage des datas

--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -20,7 +20,7 @@
                 background: $quaternary;
             }
             &__input {
-                color: #fff;
+                color: black;
                 display: flex;
                 font-size: 18px;
                 width: 120px;
