--- a/sass/components/_recipe.scss
+++ b/sass/components/_recipe.scss
@@ -8,30 +8,47 @@
     }
     &__description {
         background: $mercury;
+        font-size: 12px;
+        height: 186px;
+        overflow: hidden;
         padding: 20px;
         &__header {
             align-items: center;
             display: flex;
             justify-content: space-between;
             margin-bottom: 20px;
-
             &__title {
                 font-size: 18px;
-            }
-            &__time-icon {
-                margin-left: auto;
                 margin-right: 10px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+            }
+            &__time {
+                display: flex;
+                align-items: center;
+                img {
+                    margin-right: 10px;
+                }
+                span {
+                    font-size: 18px;
+                    white-space: nowrap;
+                }
             }
         }
         &__content {
             display: flex;
             &__liste {
-                flex: 1;
+                flex-basis: 50%;
                 margin-right: 10px;
             }
             &__text {
-                flex: 1;
+                display: -webkit-box;
+                flex-basis: 50%;
                 margin-left: 10px;
+                overflow: hidden;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 9;
             }
         }
         span {
