--- a/sass/components/_recipe.scss
+++ b/sass/components/_recipe.scss
@@ -39,12 +39,13 @@
         &__content {
             display: flex;
             &__liste {
-                flex-basis: 50%;
+                flex: 1;
+                line-height: 14.4px;
                 margin-right: 10px;
             }
             &__text {
                 display: -webkit-box;
-                flex-basis: 50%;
+                flex: 1;
                 margin-left: 10px;
                 overflow: hidden;
                 -webkit-box-orient: vertical;
