wip filtre suite bug

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,11 @@
-h1 {
-    font-size: 36px;
-    font-weight: 700;
-    color: $primary;
-}
+// Colors
+
+$blue: #3282f7;
+$blue-hover: #2472e6;
+$greenwater: #68d9a4;
+$green: green;
+$greenwater-hover: #59d199;
+$tangerine: #ed6454;
+$tangerine-hover: #dd5343;
+
+$gray: #e7e7e7;
