--- a/sass/main.css
+++ b/sass/main.css
@@ -12854,6 +12854,7 @@ body {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 0px;
     flex: 1 1 0;
+    min-height: 461px;
 }
 
 .card .time {
@@ -13124,9 +13125,14 @@ body {
 
 .selected-items .btn {
     padding-right: 25px;
-    background-image: url(/img/exit-blc.png);
+    background-image: url(/assets/img/exit-blc.png);
     background-size: 20px;
     background-position: right center;
     background-repeat: no-repeat;
+}
+
+.no-result {
+    width: 90px !important;
+    margin: 0 auto;
 }
 /*# sourceMappingURL=main.css.map */
