--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@ body {
     background: $gray;
     font-size: 0.8rem;
     flex: 1 1 0;
+    min-height: 461px;
     .time {
         font-size: 1.15rem;
         font-weight: 700;
@@ -218,9 +219,14 @@ body {
 .selected-items {
     .btn {
         padding-right: 25px;
-        background-image: url(/img/exit-blc.png);
+        background-image: url(/assets/img/exit-blc.png);
         background-size: 20px;
         background-position: right center;
         background-repeat: no-repeat;
     }
+}
+
+.no-result {
+    width: 90px !important;
+    margin: 0 auto;
 }
