--- a/sass/main.css
+++ b/sass/main.css
@@ -13135,4 +13135,8 @@ body {
     width: 90px !important;
     margin: 0 auto;
 }
+
+.mb-5 {
+    margin-bottom: 0 !important;
+}
 /*# sourceMappingURL=main.css.map */
