--- a/sass/main.css
+++ b/sass/main.css
@@ -12961,8 +12961,8 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     -ms-grid-rows: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0.25em 0.25em;
-    grid-template-areas: '. . . ' '. . . ' '. . . ' '. . . ';
+    gap: 0.25em 0.25em 0.25em 0.25em;
+    grid-template-areas: '. . . .' '. . . .' '. . . .' '. . . .';
 }
 
 .dropdown-menu .dropdown-item::first-letter {
