--- a/sass/main.scss
+++ b/sass/main.scss
@@ -91,12 +91,12 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    gap: 0.25em 0.25em;
+    gap: 0.25em 0.25em 0.25em 0.25em;
     grid-template-areas:
-        '. . . '
-        '. . . '
-        '. . . '
-        '. . . ';
+        '. . . .'
+        '. . . .'
+        '. . . .'
+        '. . . .';
 }
 
 .dropdown-menu {
