--- a/sass/main.css
+++ b/sass/main.css
@@ -13129,6 +13129,7 @@ body {
     background-size: 20px;
     background-position: right center;
     background-repeat: no-repeat;
+    margin-right: 0.8rem;
 }
 
 .no-result {
