--- a/sass/main.scss
+++ b/sass/main.scss
@@ -223,6 +223,7 @@ body {
         background-size: 20px;
         background-position: right center;
         background-repeat: no-repeat;
+        margin-right: 0.8rem;
     }
 }
 
