--- a/sass/main.css
+++ b/sass/main.css
@@ -12854,7 +12854,7 @@ body {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 0px;
     flex: 1 1 0;
-    min-height: 461px;
+    min-height: 430px;
 }
 
 .card .time {
@@ -13078,23 +13078,23 @@ body {
     position: relative;
 }
 
-.appareil .imgDrop,
-.ustensils .imgDrop,
-.ingredients .imgDrop {
+.appareil .img-drop,
+.ustensils .img-drop,
+.ingredients .img-drop {
     position: absolute;
     right: 15px;
     top: 25px;
 }
 
-.appareil .imgDrop.ingredient.clicked,
-.appareil .imgDrop.appareil.clicked,
-.appareil .imgDrop.ustensils.clicked,
-.ustensils .imgDrop.ingredient.clicked,
-.ustensils .imgDrop.appareil.clicked,
-.ustensils .imgDrop.ustensils.clicked,
-.ingredients .imgDrop.ingredient.clicked,
-.ingredients .imgDrop.appareil.clicked,
-.ingredients .imgDrop.ustensils.clicked {
+.appareil .img-drop.ingredient.clicked,
+.appareil .img-drop.appareil.clicked,
+.appareil .img-drop.ustensils.clicked,
+.ustensils .img-drop.ingredient.clicked,
+.ustensils .img-drop.appareil.clicked,
+.ustensils .img-drop.ustensils.clicked,
+.ingredients .img-drop.ingredient.clicked,
+.ingredients .img-drop.appareil.clicked,
+.ingredients .img-drop.ustensils.clicked {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
