--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@ body {
     background: $gray;
     font-size: 0.8rem;
     flex: 1 1 0;
-    min-height: 461px;
+    min-height: 430px;
     .time {
         font-size: 1.15rem;
         font-weight: 700;
@@ -191,7 +191,7 @@ body {
 .ustensils,
 .ingredients {
     position: relative;
-    .imgDrop {
+    .img-drop {
         position: absolute;
         right: 15px;
         top: 25px;
