--- a/sass/main.scss
+++ b/sass/main.scss
@@ -219,7 +219,7 @@ body {
 .selected-items {
     .btn {
         padding-right: 25px;
-        background-image: url(/assets/img/exit-blc.png);
+        background-image: url(../assets/img/exit-blc.png);
         background-size: 20px;
         background-position: right center;
         background-repeat: no-repeat;
